Fix image spacing on mobile

--- a/assets/styles/components/images.scss
+++ b/assets/styles/components/images.scss
@@ -22,7 +22,6 @@ $img_dimensions: 16 24 32 48 64 96 128 256 512;
 }
 
 .image {
-  margin: 0;
   display: block;
   position: relative;
 
